<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/big_page_margin"
            android:text="@string/edit_title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Title"
            android:textSize="@dimen/title_size" />

        <EditText
            android:id="@+id/dialog_edit_name"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:layout_margin="@dimen/default_small_padding"
            android:hint="@string/location_name"
            android:inputType="textAutoComplete"
            android:padding="@dimen/default_small_padding" />
        <EditText
            android:id="@+id/dialog_edit_latitude"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:layout_margin="@dimen/default_small_padding"
            android:hint="@string/latitude"
            android:inputType="textCapCharacters"
            android:padding="@dimen/default_small_padding" />
        <EditText
            android:id="@+id/dialog_edit_longitude"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:layout_margin="@dimen/default_small_padding"
            android:hint="@string/longitude"
            android:inputType="textCapCharacters"
            android:padding="@dimen/default_small_padding" />
        <TextView
            android:id="@+id/dialog_edit_name_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/default_small_padding"
            android:text="@string/empty_text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/dialog_edit_latitude_feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/default_small_padding"
                android:text="@string/empty_text"/>
            <TextView
                android:id="@+id/dialog_edit_longitude_feedback"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="@dimen/default_small_padding"
                android:text="@string/empty_text"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>