
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/big_page_margin"
    tools:context="com.henriquebecker.geocoordenadas.LocationFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_small_padding"
                android:text="@string/latitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/location_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/default_small_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/subhead_size"
                tools:text="68,29º" />

            <View style="@style/HorizontalDivider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_small_padding"
                android:text="@string/longitude"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/location_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/default_small_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/subhead_size"
                tools:text="68,29º" />

            <View style="@style/HorizontalDivider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_small_padding"
                android:text="@string/elevation"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/location_elevation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/default_small_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/subhead_size"
                tools:text="68m" />

            <View style="@style/HorizontalDivider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_small_padding"
                android:text="@string/speed"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/location_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/default_small_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/subhead_size"
                tools:text="4km/h" />

            <View style="@style/HorizontalDivider"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/default_small_padding"
                android:text="@string/accuracy"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="@dimen/title_size" />

            <TextView
                android:id="@+id/location_accurancy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="@dimen/default_small_padding"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="@dimen/subhead_size"
                tools:text="4m" />

            <Button
                android:id="@+id/location_save"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_small_padding"
                android:background="@color/colorPrimary"
                android:padding="@dimen/default_small_padding"
                android:text="@string/save"
                android:textSize="14sp"
                android:textStyle="bold" />
        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>

    <ProgressBar
        android:id="@+id/location_progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal|center"
        android:visibility="visible" />

</RelativeLayout>
