<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henriquebecker.geocoordenadas.DistanceFragment"
    android:orientation="vertical"
    android:layout_margin="@dimen/default_page_margin">

    <Spinner
        android:id="@+id/dGeoLocation1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dGeoLocation1"
        android:text="@string/latitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/dLat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dGeoLocation1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="@string/longitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/dLng1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/dLat1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/dAcc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dLng1"
        android:layout_alignRight="@+id/dLng1"
        android:layout_below="@+id/dLng1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <View style="@style/HorizontalDivider"
        android:layout_below="@id/dAcc1"
        android:layout_margin="@dimen/default_small_padding"
        android:id="@+id/view2" />

    <Spinner
        android:id="@+id/dGeoLocation2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dGeoLocation2"
        android:text="@string/latitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/dLat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dGeoLocation2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:text="@string/longitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/dLng2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dLat2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:layout_below="@+id/textView10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    <TextView
        android:id="@+id/dAcc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/dLng2"
        android:layout_alignRight="@+id/dLng2"
        android:layout_below="@+id/dLng2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


    <View style="@style/HorizontalDivider"
        android:layout_below="@id/dAcc2"
        android:layout_margin="@dimen/default_small_padding"
        android:id="@+id/view3" />

    <TextView
        android:id="@+id/maxError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_centerHorizontal="true"/>


    <View style="@style/HorizontalDivider"
        android:layout_below="@id/maxError"
        android:layout_margin="@dimen/default_small_padding"
        android:id="@+id/view4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view4"
        android:layout_alignStart="@+id/view4"
        android:layout_below="@+id/view4"
        android:text="@string/distance"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/dDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="24sp"
        tools:text="4000 m"
        android:layout_below="@+id/view4"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/dDistance1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_small_padding"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="24sp"
        tools:text="4 km"/>

</RelativeLayout>
